--- a/mystyle.css
+++ b/mystyle.css
@@ -18,18 +18,52 @@
     box-sizing: border-box;
 }
 
-nav {
-  display: flex;
-  justify-content: space-between;
+html {
+  font-family: 'Roboto', sans-serif;
 }
 
-nav ul{ 
-  font-size: var(--font-size-lg);
-  list-style-type: none;
-  display: flex;
-  margin-right: auto;
+header {
+  background-color: #000;
 }
+
+header h1 {
+  text-align: center;
+  font-size: var(--font-size-sm);
+  background-color: #000;
+  color: #FFF;
+}
+
+header nav ul li { 
+  font-family: 'Roboto'sans-serif;
+  font-size: var(--font-size-sm);
+  list-style-type: none;
+  margin-right: auto;
+  color: #FFF;
+  text-decoration: none;
+}
+
+header nav ul li:hover {
+  color: rgb(82, 181, 203);
+  text-decoration: none;
+}
+
+header a{
+ list-style-type: none;
+ text-decoration: none;
+}
+
+header a:visited {
+  list-style-type: none;
+  text-decoration: none;
+  color: rgb(59, 59, 59);
+ }
 
 h1 {
   font-size: var(--font-size-xl)
+}
+
+ul {
+  list-style-type: none;
+  
+  
 }
